# padea_ops_agentV2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt  worker.py
config/: __init__.py  handbook.md  policies.md  runtime_config.yaml  settings.py
database/migrations/: 001_order_line_source_defaulted_pending_confirmation.sql  002_parent_prefs_request_email_type.sql  003_enrolment_session_slots.sql  004_caterer_service_note_email_type.sql  005_cases_active_flag.sql  006_step_lesson_citations.sql  007_policies.sql  008_step_policy_citations.sql  009_enrolment_student_email.sql  010_student_feedback_source.sql  011_student_meal_choice_types.sql  (+3 more)
database/seed/: seed.sql
scripts/: build_demo_addresses.py  build_eligible_pools.py  build_session_rosters.py  build_student_demo_email.py  build_student_feedback_demo.py  db_smoke_test.py  demo_learning_loop.py  demo_lesson_citation.py  demo_loop.py  demo_policy_citation.py  dry_run_caterer_summary.py  dry_run_choice_attribution.py  dry_run_choice_trigger.py  dry_run_feedback_reply_routing.py  dry_run_feedback_rerun.py  dry_run_lesson_consolidation.py  dry_run_quality_review.py  dry_run_reply_reconciliation.py  dry_run_student_choice.py  dry_run_thursday.py  gmail_auth.py  poll_inbox.py  reset_demo.py  run_inbox_loop.py  run_inbox_once.py  run_quality_review.py  run_thursday_batch.py  run_thursday_incident.py  test_email.py  test_enforcement.py  test_query_tools.py  test_thursday_incident.py  test_writes.py
src/: __init__.py
tests/: __init__.py  test_feedback.py
ui/: server.py
(+36 files in other folders)
